syntax = "proto3";
package irismod.token.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "amino/amino.proto";
import "irismod/token/v1/token.proto";

option go_package = "mods.irisnet.org/modules/token/types/v1";

// Query creates service with token as RPC
service Query {
  // Tokens returns the token list
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/irismod/token/v1/tokens";
  }
  
  // Token returns token with token name
  rpc Token(QueryTokenRequest) returns (QueryTokenResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/irismod/token/v1/tokens/{denom=**}";
  }
  
  // Fees returns the fees to issue or mint a token
  rpc Fees(QueryFeesRequest) returns (QueryFeesResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/irismod/token/v1/tokens/{symbol}/fees";
  }
  // Params queries the token parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/irismod/token/v1/params";
  }
  // TotalBurn queries all the burnt coins
  rpc TotalBurn(QueryTotalBurnRequest) returns (QueryTotalBurnResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/irismod/token/v1/total_burn";
  }
  // Balances queries the balance of the specified token (including erc20
  // balance)
  rpc Balances(QueryBalancesRequest) returns (QueryBalancesResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
        "/irismod/token/v1/balances/{address}/{denom=**}";
  }
}

// QueryTokenRequest is request type for the Query/Token RPC method
message QueryTokenRequest { string denom = 1 ; }

// QueryTokenResponse is response type for the Query/Token RPC method
message QueryTokenResponse {
  google.protobuf.Any token = 1
      [ (cosmos_proto.accepts_interface) = "ContentI" ];
}

// QueryTokensRequest is request type for the Query/Tokens RPC method
message QueryTokensRequest {
  string owner = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryTokensResponse is response type for the Query/Tokens RPC method
message QueryTokensResponse {
  repeated google.protobuf.Any tokens = 1
      [ (cosmos_proto.accepts_interface) = "ContentI" ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryFeesRequest is request type for the Query/Fees RPC method
message QueryFeesRequest { string symbol = 1; }

// QueryFeesResponse is response type for the Query/Fees RPC method
message QueryFeesResponse {
  bool exist = 1;
  cosmos.base.v1beta1.Coin issue_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin mint_fee = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

// QueryParametersRequest is request type for the Query/Parameters RPC method
message QueryParamsRequest {}

// QueryParametersResponse is response type for the Query/Parameters RPC method
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];

  cosmos.base.query.v1beta1.PageResponse res = 2;
}

// QueryTokenRequest is request type for the Query/TotalBurn RPC method
message QueryTotalBurnRequest {}

// QueryTotalBurnResponse is response type for the Query/TotalBurn RPC method
message QueryTotalBurnResponse {
  repeated cosmos.base.v1beta1.Coin burned_coins = 1
      [ (gogoproto.nullable) = false ];
}

// QueryBalancesRequest is request type for the Query/Balances RPC method
message QueryBalancesRequest {
  string denom = 1;
  // address is the address to query balances for.
  string address = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// QueryBalancesResponse is response type for the Query/Balances RPC method
message QueryBalancesResponse {
  // balances is the balances of all the coins.
  repeated cosmos.base.v1beta1.Coin balances = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
